--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,34 +1,35 @@
 /* reset values */
 * {
     border: none;
-    border-radius: 0;
+    border-radius: 0px;
     font-family: "IBM Plex Mono";
-    font-weight: normal;
-    font-size: 12px;
+    font-weight: bold;
+    font-size: 10px;
     margin-left: 5px;
     margin-right: 5px;
-    margin-top: 3px;
-    margin-bottom: 3px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 window#waybar {
-    background: rgba(0, 0, 0, 0);
+    border: 2px solid white;
+    background: rgba(17, 17, 17, 1);
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 #clock {
     color: #EEEEEE;
-    background-color: rgba(17, 17, 17, 0.6);
     padding-right: 3px;
     padding-left: 3px;
 }
 
 #workspaces {
     color: #EEEEEE;
-    background: rgba(17, 17, 17, 0.6);
     padding-right: 3px;
     padding-left: 3px;
 }
 
 #workspaces button:hover {
-    background: rgba(17, 17, 17, 0.9);
+    background: rgba(17, 17, 17, 0.6);
 }
